--- a/app/assets/javascripts/templates/media/_review_summary.hbs
+++ b/app/assets/javascripts/templates/media/_review_summary.hbs
@@ -38,7 +38,7 @@
     <div class="reviewer-avatar">
       {{avatar user 'thumb'}}
     </div>
-    <div class="media-body">
+    <div class="reviewer-name">
       <div>
         {{user.username}}
       </div>                    
