Swap login and signup links to the new pages

--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -5,7 +5,7 @@
   <p>
     Hummingbird is the easiest way to track, share and discover new anime.
     <small>Join now, for free!</small>
-    <a class="btn btn-xs" href="/users/sign_up">Get Started</a>
+    {{#link-to 'sign-up' class="btn btn-xs"}}Get Started{{/link-to}}
   </p>
 </div>
 {{/unless}}
