--- a/app/assets/javascripts/templates/header/right-content.hbs
+++ b/app/assets/javascripts/templates/header/right-content.hbs
@@ -4,6 +4,6 @@
   {{partial "header/avatar"}}
 {{else}}
   <li>
-    <a href="/users/sign_in"> Sign in</a>
+    {{#link-to 'sign-in'}} Sign in{{/link-to}}
   </li>
 {{/if}}
