allow users to add/edit youtube trailer

--- a/app/assets/javascripts/templates/modals/edit-anime.hbs
+++ b/app/assets/javascripts/templates/modals/edit-anime.hbs
@@ -19,6 +19,10 @@
           <label>Episode Length</label>
           {{input type="number" value=episodeLength class="form-control"}}
         </div>
+        <div class="form-group">
+          <label>YouTube Video Id</label>
+          {{input value=youtubeVideoId class="form-control"}}
+        </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
