Fix Kibana route.

--- a/app/assets/javascripts/templates/kotodama.hbs
+++ b/app/assets/javascripts/templates/kotodama.hbs
@@ -11,7 +11,7 @@
             <li><a class="btn" href="/kotodama/rails_admin">Biribiri Admin</a></li>
             <li><a class="btn" href="/kotodama/sidekiq">Sidekiq Dashboard</a></li>
             <li><a class="btn" href="/kotodama/pghero">PG Hero</a></li>
-            <li><a class="btn" href="/kotodama/kibana">Kibana</a></li>
+            <li><a class="btn" href="/kibana">Kibana</a></li>
             <li>
               {{#link-to 'edits' class="btn"}}
                 {{pluralize pending_count "Pending Edit" "Pending Edits"}}
