switch over to using full serializers for versions, do a diff of cover_image, poster_image, and youtube_video_id

--- a/app/assets/stylesheets/partials/edits.css.scss
+++ b/app/assets/stylesheets/partials/edits.css.scss
@@ -13,13 +13,17 @@
     del { background-color: rgba(255, 0, 0, 0.4); }
 
     .poster_image {
+      &:first-child { margin-right: 10px; }
       width: 200px;
       height: 300px;
     }
 
     .cover_image {
+      &:first-child { margin-right: 10px; }
       width: 400px;
       height: 200px;
     }
+
+    iframe:first-child { margin-right: 10px; }
   }
 }
