Update footer logo to use local path

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -699,7 +699,7 @@ html { overflow-y: auto; }
 }
 
 .hb-luvs {
-  background: url(http://cl.ly/image/0z2d3w0q462x/footer-logo.png);
+  background: url(../footer-logo.png);
   background-size: cover;
   width: 30px;
   height: 30px;
