Cleanup login and register pages a bit

--- a/app/assets/javascripts/templates/sign-in.hbs
+++ b/app/assets/javascripts/templates/sign-in.hbs
@@ -1,3 +1,8 @@
+<style>
+  body {background: #525A65;}
+  .signup-cta {display: none;}
+</style>
+
 <div class="bg-image-wrapper login clearfix">
   <div class="col-md-8 col-md-offset-2 panel panel-default account-panel">
     <div class="panel-heading">
