--- a/app/assets/javascripts/templates/sign-up.hbs
+++ b/app/assets/javascripts/templates/sign-up.hbs
@@ -1,7 +1,11 @@
+<style>
+  body {background: #525A65;}
+  .signup-cta {display: none;}
+</style>
 <div class="bg-image-wrapper login clearfix">
   <div class="col-md-8 col-md-offset-2 panel panel-default account-panel">
     <div class="panel-heading">
-      <h3>It's not like we like you, or anything ... S-stupid!</h3>
+      <h3>Simply having an account increases your power level.</h3>
     </div>
     <div class="panel-body">
       <form class="account-form col-md-6" {{action "signUp" on="submit"}}>
