--- a/app/assets/javascripts/templates/reviews/show.hbs
+++ b/app/assets/javascripts/templates/reviews/show.hbs
@@ -67,7 +67,7 @@
   <!-- Right Side -->
   <div class="review-sidebar">
     <div class="series-panel">
-      <div class="reviewer-avatar">
+      <div class="review-avatar">
         <img src="https://static.hummingbird.me/users/avatars/000/002/321/thumb/best_girl._not_worth_arguing__564cd10f3e281c45dde9288b61205bf2.jpg?1398731881" />
       </div>
       <div class="reviewer-information">
