--- a/app/assets/javascripts/templates/onboarding/library.hbs
+++ b/app/assets/javascripts/templates/onboarding/library.hbs
@@ -10,13 +10,16 @@
       Rate <strong>{{remainingRatings}} more</strong> to continue</strong>
     </a>
   {{/if}}
-  <a href="#" {{action 'importLibrary'}}>
-    {{#if importFromMal}}
-      <i class="fa fa-spinner"></i>Importing your library...
-    {{else}}
-      Or import library from MAL
-    {{/if}}
-  </a>
+  <div class="col-sm-12">
+    <div class="import-panel">
+      {{#if importFromMal}}
+        <i class="fa fa-spinner"></i> Hang tight, we're importing your data.
+      {{else}}
+        Have a MAL account? <a href="#" {{action 'importLibrary'}}>We can import your xml back-up!</a>
+        <a href="http://myanimelist.net/panel.php?go=export" target="_blank" class="import-help"><i class="fa fa-question-circle"></i></a>
+      {{/if}}
+    </div>
+  </div>
 </div>
 
 <div class="library-tab-wrapper col-sm-8">
