--- a/app/assets/javascripts/templates/onboarding.hbs
+++ b/app/assets/javascripts/templates/onboarding.hbs
@@ -1,3 +1,6 @@
+<style>
+  .hb-nav {display: none;}
+</style>
 <nav class="navbar navbar-inverse navbar-fixed-top hb-nav onboarding-nav" role="navigation">
   <div class="container clearfix">
     <div class="navbar-header">
