--- a/app/assets/javascripts/templates/onboarding/start.hbs
+++ b/app/assets/javascripts/templates/onboarding/start.hbs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-5 no-padding-right" style="padding-left: 35px; margin-top: 20px;">
+  <div class="start-wrapper col-sm-5">
     <h3>You've made a great decision.</h3>
 
     <p style="margin-bottom: 25px;">Hummingbird is a social network for sharing your taste in anime and manga. See what your friends have been enjoying, track what you've seen or read and get personalized recommendations.</p>
