--- a/app/assets/javascripts/templates/anime/_cast.hbs
+++ b/app/assets/javascripts/templates/anime/_cast.hbs
@@ -2,8 +2,8 @@
   {{#each filteredCast}}
     <li class="character-wrapper">
       <div class="cast-image">
-        <image class="actor" {{bind-attr src=person.image}}>
-        <image class="character" {{bind-attr src=character.image}}>
+        <img class="actor" {{bind-attr src=person.image}}>
+        <img class="character" {{bind-attr src=character.image}}>
       </div>
       <div class="cast-name">
         <h4>{{person.name}}</h4>
