Fix "all quotes" page.

--- a/app/assets/javascripts/templates/anime/index.hbs
+++ b/app/assets/javascripts/templates/anime/index.hbs
@@ -242,7 +242,7 @@
         </div>
       </div>
       <div class="view-more">
-        <a href="#">View More Quotes</a>
+        {{#link-to 'anime.quotes'}}View More Quotes{{/link-to}}
       </div>
     </div>
     <!-- quotes end -->
